...
        android:layout_marginEnd="-4dp"
        app:layout_constraintHorizontal_bias="0.0"
        tools:visibility="visible"
        tools:translationY="0dp">

        <com.cliffracertech.bootycrate.view.TintableCheckbox
            android:id="@+id/autoAddToShoppingListCheckBox"
            android:layout_width="48dp"
            android:layout_height="48dp"
            tools:tint="@color/list_item_color_red"
            style="@style/ListItemColorEdit" />

        <TextView
...
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            style="@style/InventoryItemAutoAddToShoppingListCheckboxLabel" />

        <com.cliffracertech.bootycrate.view.IntegerEdit
            android:id="@+id/autoAddToShoppingListAmountEdit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            style="@style/InventoryItemAutoAddToShoppingListTriggerEdit" />

        <TextView
            android:id="@+id/autoAddToShoppingListAmountEditLabel"
...
